[tool.poetry]
name = "tdd-project"
version = "0.1.0"
description = ""
authors = ["Eduardo Monteiro <emonteiro847@gmial.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.2"
fastapi = "^0.184.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
motor = "^3.3.1"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
pre-commit = "^3.7.1"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
